--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,16 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme.Base" parent="@style/Theme.AppCompat.Light">
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+
+        <item name="android:activatedBackgroundIndicator">@color/secondary</item>
+
+        <!--<item name="android:fitsSystemWindows">true</item>-->
+
     </style>
+
+    <style name="AppTheme" parent="AppTheme.Base"/>
 
 </resources>
